<resources>
    <string name="app_name">Trivia App</string>
    <string name="trivia_intent">Trivia</string>
    <string name="welcomeTextView">Welcome to Trivia App</string>
    <string name="startButton">Start Trivia</string>
    <string name="exitButton">Exit</string>
    <string name="loadingTextView">Loading Trivia</string>
    <string name="startTimer">Time Left: 120 seconds</string>
    <string name="previousButton">Previous</string>
    <string name="nextButton">Next</string>
    <string name="correctAnswersTextView">Correct answers</string>
    <string name="finishButton">Finish</string>
    <string name="performanceTextView">Your performance: </string>
    <string name="percentageTextView">0%</string>
    <string name="loadingImage">Loading Image</string>

</resources>
