<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joyrasmussen.hw4_group34.StatsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/correctAnswersTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/correctAnswerTextView"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/button"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/background_light"
            android:onClick="finishStats" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_height="230dp"
            android:fillViewport="true"
            android:id="@+id/scrollView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linLayout">


            </LinearLayout>
        </ScrollView>

        <TextView
            android:text="@string/performanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrollView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp"
            android:id="@+id/textView2"
            android:textSize="18sp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="18dp"
            android:id="@+id/progressBar"
            android:layout_width="300dp" />

        <TextView
            android:text="@string/percentageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percentageTextView"
            android:textSize="18sp"
            android:layout_above="@+id/progressBar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</RelativeLayout>
